--- a/src/components/Home/Travel/travel.scss
+++ b/src/components/Home/Travel/travel.scss
@@ -1,33 +1,227 @@
 .travel-container {
-    background-color: #F7F7F2;
+
+    
+    
+
 
     .travel-wrapper {
-        max-width: 928px;
+
         background-color: #F7F7F2;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+
 
 
         .hero1-wrapper {
+            max-width: 928px;
+            padding: 96px 24px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
 
-           .title-wrapper {
+            .title-wrapper {
 
-            margin: 0 0 96px;
+                margin: 0 0 96px;
 
+                h1 {
+                    color: #141414;
+                    font-size: 97px;
+                }
 
-            h1 {
-                color: #141414;
-                font-size: 67px;
             }
 
-           }
+            .desc-wrapper {
+                text-align: center;
+                justify-content: center;
+
+                .titlep {
+
+                    p {
+                        color: black;
+                        text-align: center;
+                        font-size: 36px;
+                    }
+
+                }
+
+                p {
+                    text-align: center;
+                    font-size: 36px;
+                    color: #00000080;
+                }
+            }
         }
 
-        .image-wrapper {
-            background-image: radial-gradient(100% 50% at 50% 0,#f5eaeb 2%,#ebeada00 98%),radial-gradient(100% 50% at 50% 100%,#ede9e4 1%,#f4f0e100 99%),linear-gradient(0deg,#f8eff1 3%,#fdf3f4);
-            background-position: 0 0,0 0,0 0;
-            background-size: 100% 100%;
+
+    }
+
+    .image-wrapper {
+        background-image: radial-gradient(100% 50% at 50% 0, #f5eaeb 2%, #ebeada00 98%), radial-gradient(100% 50% at 50% 100%, #ede9e4 1%, #f4f0e100 99%), linear-gradient(0deg, #f8eff1 3%, #fdf3f4);
+        background-position: 0 0, 0 0, 0 0;
+        background-size: 100% 100%;
+        margin: 0 0 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 96px 24px;
+        margin-bottom: 0px;
+
+
+
+
+        img {
+            border-radius: 0;
+            height: auto;
+            margin: 0 0 1rem;
+            max-width: 928px;
+
         }
+    }
+
+    .smaller-title {
+
+        text-align: center;
+        background-color: #F7F7F2;
+        width: 100%;
+        padding: 10px 0;
+
+        p {
+            margin: 0 auto;
+            color: #727272;
+            font-size: 12px;
+            // font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+    }
+
+    .list-container {
+        background-color: #F7F7F2;
+
+        display: grid;
+        row-gap: 88px;
+        align-items: center;
+        justify-content: center;
+        padding: 176px 0 0;
+        // border-bottom: 1px solid #727272;
+        padding-bottom: 88px;
 
         .list-wrapper {
+            max-width: 928px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            border-top: 1px solid rgba(0, 0, 0, 0.502);
+            row-gap: 88px;
+            flex-wrap: wrap;
+
+
+
+
+
+            .list-center {
+                margin-top: 88px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+
+
+                .list-title {
+                    width: 50%;
+                    text-align: start;
+
+                    p {
+                        text-align: start;
+                        font-size: 28px;
+                        color: #141414;
+                        line-height: 120%;
+                    }
+                }
+
+                .list-desc {
+                    width: 50%;
+                    text-align: start;
+
+                    p {
+                        font-size: 24px;
+                        color: #00000080;
+                    }
+                }
+            }
+        }
+    }
+
+    .last-container {
+        background-color: #F7F7F2;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-bottom: 1px solid #727272;
+        padding-bottom: 88px;
+
+        
+
+        .last-wrapper {
+            padding-top: 44px;
+            max-width: 928px;
+            border-top: 1px solid #727272;
+            width: 100%;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            .last-title {
+              
+                text-align: center;
+                margin: 0 0 56px;
+
+                p {
+                    font-size: 28px;
+                    color: #141414;
+
+                }
+            }
+
+            .last-desc {
+                margin: 0 0 48px;
+
+                p {
+                    text-align: center;
+                    font-size: 24px;
+                    color: #727272;
+                    line-height: 140%;
+                    margin: 0 auto;
+                    max-width: 60%;
+                }
+            }
+
+
+        }
+    }
+
+    a {
+        height: 40px;
+        
+        background-color: #F7F7F2;
+
+    
+
+        button {
+            background-color: #F7F7F2;
+            padding: 5px 16px;
+            color: black;
+            font-size: 20px;
+            border-radius: 4rem;
+            border:2px solid #727272;
+            cursor: pointer;
+
 
         }
     }
