--- a/src/components/Home/Travel/travel.scss
+++ b/src/components/Home/Travel/travel.scss
@@ -125,8 +125,8 @@
             .list-center {
                 margin-top: 88px;
                 display: flex;
-                justify-content: center;
-                align-items: center;
+                // justify-content: center;
+                // align-items: center;
 
 
 
@@ -135,6 +135,7 @@
                     text-align: start;
 
                     p {
+                        width: 40%;
                         text-align: start;
                         font-size: 28px;
                         color: #141414;
