--- a/src/components/Home/Travel/travel.scss
+++ b/src/components/Home/Travel/travel.scss
@@ -1,8 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+* {
+  font-family: 'Roboto', sans-serif; /* Apply the imported 'Roboto' font here */
+  font-weight: 300;
+}
+
 .travel-container {
-
-    
-    
-
 
     .travel-wrapper {
 
@@ -114,7 +117,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            border-top: 1px solid rgba(0, 0, 0, 0.502);
+            border-top: 1px solid #c3c3c3;
             row-gap: 88px;
             flex-wrap: wrap;
 
@@ -162,7 +165,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        border-bottom: 1px solid #727272;
+        border-bottom: 1px solid #c3c3c3;
         padding-bottom: 88px;
 
         
@@ -170,7 +173,7 @@
         .last-wrapper {
             padding-top: 44px;
             max-width: 928px;
-            border-top: 1px solid #727272;
+            border-top: 1px solid #c3c3c3;
             width: 100%;
 
             display: flex;
@@ -220,7 +223,7 @@
             color: black;
             font-size: 20px;
             border-radius: 4rem;
-            border:2px solid #727272;
+            border:2px solid #c3c3c3;
             cursor: pointer;
 
 
