--- a/src/components/Home/Home1/home1.scss
+++ b/src/components/Home/Home1/home1.scss
@@ -84,3 +84,56 @@
         }
     }
 }
+
+
+/* Media query for screens with a maximum width of 768.87px */
+@media (max-width: 768.87px) {
+    .hero-wrapper {
+        padding: 80px 0 160px; /* Adjust padding for smaller screens */
+        
+
+        .hero {
+            .title-wrapper {
+                margin-bottom: 30px; /* Adjust margin for smaller screens */
+                h1 {
+             
+                    font-size: 80px;
+                }
+            }
+        }
+
+        .text-wrapper {
+
+          
+
+            p {
+                font-size: 24px;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .hero-wrapper {
+        padding: 80px 0 160px; /* Adjust padding for smaller screens */
+        
+
+        .hero {
+            .title-wrapper {
+                margin-bottom: 30px; /* Adjust margin for smaller screens */
+                h1 {
+                   
+                    font-size: 45px;
+                }
+            }
+        }
+
+        .text-wrapper {
+
+
+            p {
+                font-size: 18px;
+            }
+        }
+    }
+}
